style.css
*{
    margin: 0;
    padding: 0;
}

html{
    scroll-behavior: smooth;
}

body{
    background-color: #000000;
    color: #FFFFFF;
    font-family: 'Poppins', sans-serif;
    font-weight: 300;
}

h1, h2, h3, h4{
    font-family: 'Poppins', sans-serif;
    font-weight: 300;
}

i{
    font-size: 2rem;
}

.shorty{
  border-top: 1px solid white;
  border-bottom: 1px solid gray;
  margin: auto;
  margin-top: 1em;
  margin-bottom: 1em;
  max-width: 5vh;
}

.idLink:link{
    color: #FFFFFF;
    text-decoration:none;
}

.idLink:visited{
    color: #FFFFFF;
    text-decoration:none;
}

.idLink:hover{
    color: #AAAAAA;
}

.idLink:active{
    color: #FFFFFF;
    border-color: #FFFFFF;
}
.socialIcon{
    width:auto;
    height: 3rem;
}

.socialIconMini{
    width:auto;
    height: 2rem;
}

.albumart{
    /* max-width: 40%; */
    height: auto;
}

.navScroll {
    background: rgba(0, 0, 0, 0.2);
    transition: background 200ms;
}

.bgoutline{
    background-color: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(0.7rem);
}

#mainNav {
    font-size: 1.5rem;
    font-weight: 200;
}

#mainNav .navbar-toggler {
    border: none;
}

#mainNav .nav-link{
    color: #FFFFFF;
}

#mainNav .nav-link:hover{
    color: #acacac;

}

#mainNav .active .nav-link{
    color: #acacac;
}

#mainNav .dropdown-menu {
    background: none;
    border: none;
    padding: none;
    margin: none;
    margin-top: -0.5em;
    font-size: 1.5rem;
    font-weight: 300;
}

#mainNav .dropdown-item {
    background: none;
    border: none;
    padding: none;
    margin: none;
    margin-left: -0.7em;
    color: #FFFFFF;
    font-size: 1.5rem;
    font-weight: 300;
}

#header{
    height: 92vh;
    background-image: url(img/grating.JPG);
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
}

#discoheader{
    height: 20vh;
    background-image: url(img/grating.JPG);
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
}

#header-content{
    text-align: center;
    align-self: center;
    align-items: center;
}

#header-content img{
    max-width: 50vw;
}

#header-content h3{
    display: inline-block;
}

#subtitle{
    letter-spacing:15px;
}

#aboutsection{
    background-image: url(img/leg.jpg);
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
}

#aboutparagraph{
    margin: auto;
    
    line-height: 2rem;
    font-size: 1.3rem;
    max-width: 80%;
}

#footer{
    background-color: #323232;
    color: #787878;
}

